# nixpkg-process-triage

./: README.md  flake.nix
nix/: package-manifest.json  package.nix
scripts/: sync-from-upstream.sh
upstream/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN_TO_MAKE_PROCESS_TRIAGE_INTO_AN_ALIEN_TECHNOLOGY_ARTIFACT.md  README.md  cpu-limiter.sh  install.sh  pt  pt-install-tools
upstream/.beads/: .gitignore  config.yaml  issues.jsonl
upstream/.cargo/: config.toml
upstream/crates/: README.md
upstream/crates/pt-config/: Cargo.toml
upstream/crates/pt-config/src/: lib.rs  policy.rs  policy_bundle.rs  preset.rs  priors.rs  provenance.rs
upstream/crates/pt-math/: Cargo.toml
upstream/crates/pt-math/benches/: beta_ops.rs
upstream/crates/pt-math/src/: lib.rs
upstream/crates/pt-math/src/math/: beta.rs  gamma.rs  mod.rs  normal.rs  posterior.rs  precomputed.rs  stable.rs
upstream/crates/pt-math/tests/: numerical_stability_stress.rs
upstream/docs/: AGENT_CLI_CONTRACT.md  AGENT_INTEGRATION_GUIDE.md  CLI_SPECIFICATION.md  DORMANT_DAEMON_SPEC.md  FIXTURES.md  FLEET_OPERATIONS_GUIDE.md  GALAXY_BRAIN_CARDS.md  GOLDEN_PATH_UX.md  NO_MOCK_POLICY.md  PACKAGE_ARCHITECTURE.md  PLAN_ACTION_SPACE_MAPPING.md  PLAN_INFERENCE_ENGINE_MAPPING.md  PLAN_REAL_WORLD_USEFULNESS_MAPPING.md  PLAN_UX_EXPLAINABILITY_MAPPING.md  PROVENANCE_CONTROLS_AND_ROLLOUT.md  PROVENANCE_OPERATOR_GUIDE.md  PROVENANCE_PRIVACY_MODEL.md  PROVENANCE_TESTING_AND_LOGGING.md  SIGNATURE_AUTHORING_GUIDE.md  TEST_COVERAGE_MATRIX.md  TOON_INTEGRATION_BRIEF.md  test_coverage_map.md
(+414 files in other folders)
