[package]
name = "pt-math"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Numerical stability primitives for Process Triage"

[lib]
name = "pt_math"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "beta_ops"
harness = false
